// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GrantInformationSection should render default view 1`] = `
<Section
  cards={
    Array [
      Object {
        "groups": Array [
          Array [
            "grants",
          ],
        ],
        "title": "Grant information",
      },
    ]
  }
  disabled={false}
/>
`;

exports[`GrantInformationSection should render disabled view 1`] = `
<Section
  cards={
    Array [
      Object {
        "groups": Array [
          Array [
            "grants",
          ],
        ],
        "title": "Grant information",
      },
    ]
  }
  disabled={true}
/>
`;
